syntax = "proto3";

package taskservice;

service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (TaskResponse);
  rpc GetTask (GetTaskRequest) returns (TaskResponse);
  rpc UpdateTask (UpdateTaskRequest) returns (TaskResponse);
  rpc DeleteTask (DeleteTaskRequest) returns (DeleteResponse);
  rpc ListTasks (ListTasksRequest) returns (stream TaskResponse);
  rpc StreamTaskUpdates (TaskSubscriptionRequest) returns (stream TaskUpdateEvent);
}

message CreateTaskRequest {
  string title = 1;
  string description = 2;
  string priority = 3;
  string status = 4;
  int32 user_id = 5;
  int32 project_id = 6;
}

message TaskResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string priority = 4;
  string status = 5;
  int32 user_id = 6;
  int32 project_id = 7;
  string created_at = 8;
  string updated_at = 9;
}

message GetTaskRequest {
  int32 id = 1;
}

message UpdateTaskRequest {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string priority = 4;
  string status = 5;
}

message DeleteTaskRequest {
  int32 id = 1;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}

message ListTasksRequest {
  int32 user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
  string status = 4;
}

message TaskSubscriptionRequest {
  int32 user_id = 1;
  repeated int32 task_ids = 2;
}

message TaskUpdateEvent {
  string event_type = 1;
  TaskResponse task = 2;
  string timestamp = 3;
}
